Use master branch of moab

--- a/conda/default.cfg
+++ b/conda/default.cfg
@@ -27,7 +27,7 @@ esmf = 8.6.1
 hdf5 = 1.14.3
 lapack = 3.9.1
 metis = 5.1.0
-moab = 5.5.1
+moab = master
 netcdf_c = 4.9.2
 netcdf_fortran = 4.6.1
 petsc = 3.19.1
