--- a/compass/ocean/tests/utility/combine_topo/combine_topo.cfg
+++ b/compass/ocean/tests/utility/combine_topo/combine_topo.cfg
@@ -5,13 +5,20 @@
 antarctic_filename = BedMachineAntarctica-v3.nc
 global_filename = GEBCO_2023.nc
 
-# the name of the output topography file, to be copied to the bathymetry database
-cobined_filename = BedMachineAntarctica_v3_and_GEBCO_2023_0.0125_degree_20240828.nc
+resolution = 0.5
+method = bilinear
+
+# the threshold for masks below which interpolated variables are not renormalized
+renorm_thresh = 1e-3
 
 # the target and minimum number of MPI tasks to use in remapping
-ntasks = 512
-min_tasks = 128
+ntasks = 1280
+min_tasks = 512
 
 # latitudes between which the topography datasets get blended
 latmin = -62.
 latmax = -60.
+
+# the number of tiles in lat and lon for GEBCO remapping
+lat_tiles = 3
+lon_tiles = 6
