Finished working version of combine_topo test that includes lat_lon and cubed_sphere remapping cases, and successfully ran for 0.1 deg and ne30 target grids

--- a/compass/ocean/tests/utility/combine_topo/combine_topo.cfg
+++ b/compass/ocean/tests/utility/combine_topo/combine_topo.cfg
@@ -5,10 +5,12 @@
 antarctic_filename = BedMachineAntarctica-v3.nc
 global_filename = GEBCO_2023.nc
 
-resolution = 0.5
+# target resolution (degrees or NExxx)
+resolution_latlon = 0.0125
+resolution_cubedsphere = 9000
 method = bilinear
 
-# the threshold for masks below which interpolated variables are not renormalized
+# threshold for masks below which interpolated variables are not renormalized
 renorm_thresh = 1e-3
 
 # the target and minimum number of MPI tasks to use in remapping
