Modified ocean/mesh/remap_topography to use mbtempest weights file generation.

--- a/compass/ocean/mesh/remap_topography.cfg
+++ b/compass/ocean/mesh/remap_topography.cfg
@@ -2,7 +2,8 @@
 [remap_topography]
 
 # the name of the topography file in the bathymetry database
-topo_filename = BedMachineAntarctica_v3_and_GEBCO_2023_0.0125_degree_20240828.nc
+topo_filename = BedMachineAntarctica_v3_and_GEBCO_2023_ne3000_20241004.nc
+src_scrip_filename = ne3000_20241004.scrip.nc
 
 # variable names in topo_filename
 lon_var = lon
@@ -31,3 +32,10 @@ renorm_threshold = 0.01
 
 # the density of land ice from MALI (kg/m^3)
 ice_density = 910.0
+
+# smoothing parameters
+# no smoothing:
+#     expandDist = 0   [m]
+#     expandFactor = 1 [cell fraction]
+expandDist = 0
+expandFactor = 1
